# projetc1-fastapi

./: README.md  converter.py  main.py  pyproject.toml  routers.py  schemas.py
