[tool.poetry]
name = "projetc1-fastapi"
version = "0.1.0"
description = ""
authors = ["nathalialp"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
requests = "^2.31.0"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
